# SPlat

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  dependencies.py  dependencies_directed_graph.py
include/: AbstractAssetFactoryConfig.h  Asset.h  AssetFactoryConfig.h  AssetFactoryConfigInterface.h  Character.h  Client.h  ClientConfig.h  ClientController.h  Config.h  ConfigInterface.h  Controller.h  ControllerInterface.h  DisconnectDto.h  Entrypoint.h  Environment.h  EnvironmentInterface.h  Event.h  FauxServerController.h  GameObjectModel.h  IdDto.h  KeyEvents.h  LocalTimeline.h  MovingPlatform.h  Platform.h  Request.h  Response.h  Runtime.h  Serialization.h  Server.h  ServerController.h  ServerDto.h  Timeline.h  TimingConfig.h  TimingConfigInterface.h
include/events/: AssetEvents.h  CharacterEvents.h  Command.h  CommandHandlerInterface.h  ControlAssetEvent.h  CreateAssetEvent.h  CreateCharacterHandler.h  CreateControlAssetEvent.h  CreateMovingPlatformHandler.h  CreatePlatformHandler.h  DeleteAssetHandler.h  Event.h  EventHandlerInterface.h  GetAssetHandler.h  KeyEvents.h  KeyPressCommandHandler.h  KeyPressEventHandler.h  KeyPressHandler.h  KeyReleaseCommandHandler.h  KeyReleaseEventHandler.h  Listener.h  ListenerInterface.h  MovingPlatformEvents.h  OrderedPriorityListener.h  PlatformEvents.h  TickEvent.h  UpdateAssetEvent.h  UpdateAssetHandler.h
include/events/handlers/: ClientCreateCharacterHandler.h  ClientCreateMovingPlatformHandler.h  ClientCreatePlatformHandler.h  ClientDeleteAssetHandler.h  ClientDespawnAssetHandler.h  ClientReadAssetHandler.h  ClientSpawnAssetHandler.h  ClientUpdateAssetHandler.h  CreateCharacterHandler.h  CreateMovingPlatformHandler.h  CreatePlatformHandler.h  DeleteAssetHandler.h  DespawnAssetHandler.h  EventHandlerInterface.h  GetAssetHandler.h  KeyPressHandler.h  KeyReleaseHandler.h  ReadAssetHandler.h  ServerCreateCharacterHandler.h  ServerCreateMovingPlatformHandler.h  ServerCreatePlatformHandler.h  ServerDeleteAssetHandler.h  ServerDespawnAssetHandler.h  ServerReadAssetHandler.h  ServerSpawnAssetHandler.h  ServerUpdateAssetHandler.h  SpawnAssetHandler.h  UpdateAssetHandler.h
include/model/: AbstractAssetFactory.h  AbstractMovingFactory.h  Asset.h  AssetFactory.h  AssetProperties.h  Character.h  CharacterCollisionHandler.h  CharacterFactory.h  CharacterProperties.h  CharacterUpdateHandler.h  CollisionHandler.h  GameObjectModel.h  Moving.h  MovingPlatform.h  MovingPlatformCollisionHandler.h  MovingPlatformFactory.h  MovingPlatformProperties.h  MovingPlatformUpdateHandler.h  MovingProperties.h  ObjectModelInterface.h  Platform.h  PlatformCollisionHandler.h  PlatformFactory.h  Properties.h  Spawnpoint.h  UnorderedMapObjectModel.h  UnorderedStandingConfig.h  UpdateHandler.h
include/model/handler/: CharacterCollisionHandler.h  CharacterUpdateHandler.h  CollisionHandler.h  MovingPlatformCollisionHandler.h  MovingPlatformUpdateHandler.h  PlatformCollisionHandler.h  StandingConfigInterface.h  UnorderedStandingConfig.h
include/utilities/: Functions.h
src/: AbstractAssetFactory.cpp  AbstractMovingFactory.cpp  Asset.cpp  AssetEvents.cpp  AssetFactoryConfig.cpp  Character.cpp  CharacterCollisionHandler.cpp  CharacterEvents.cpp  CharacterFactory.cpp  CharacterUpdateHandler.cpp  Client.cpp  ClientConfig.cpp  ClientController.cpp  ClientCreateCharacterHandler.cpp  ClientCreateMovingPlatformHandler.cpp  ClientCreatePlatformHandler.cpp  ClientDeleteAssetHandler.cpp  ClientReadAssetHandler.cpp  ClientUpdateAssetHandler.cpp  Config.cpp  ControlAssetEvent.cpp  Controller.cpp  CreateAssetEvent.cpp  CreateCharacterHandler.cpp  CreateControlAssetEvent.cpp  CreateMovingPlatformHandler.cpp  CreatePlatformHandler.cpp  DeleteAssetHandler.cpp  Entrypoint.cpp  Environment.cpp  Event.cpp  FauxServerController.cpp  GameObjectModel.cpp  GetAssetHandler.cpp  KeyEvents.cpp  KeyPressCommandHandler.cpp  KeyPressHandler.cpp  KeyReleaseCommandHandler.cpp  KeyReleaseHandler.cpp  Listener.cpp  (+29 more)
test/: Demo.cpp  TestAssetFactory.cpp  TestClient.cpp  TestEvents.cpp  TestGameObjectModel.cpp  TestSerialization.cpp  TestServer.cpp
